# Osorio-Quiroga-Juan-Pablo

./: README.md  flexbox.html  index.html  pyproject.toml
css/: style.css
employee_management/: db.sqlite3
employee_management/employee_app/: models.py  urls.py  views.py
employee_management/employee_app/static/css/: style-baseform.css  style-index.css  style.css
employee_management/employee_app/static/js/: scripts.js
employee_management/employee_app/templates/employee_app/: baseform.html  coe.html  customer.html  employee.html  index.html  job_position.html  login.html
employee_management/employee_management/: settings.py  urls.py  views.py
employee_management/templates/: index.html
env/: pyvenv.cfg
