[project]
name = "employee-management"
version = "0.1.0"
description = "sistema gestor de empleados y proyectos de una consultora de software"
authors = [
    {name = "juan pablo osorio",email = "juanpaosorio199@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
django = "^5.2.1"
psycopg2-binary = "^2.9.10"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
